--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林), server: 5.183.102.34, port: 37667, type: vmess, uuid: 66f93c8f-4458-41d3-e447-f0b57d893527, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-362.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-348.7KB/s(Youtube:不良林), server: hk-hkg-sh-hk-02-v2.cdn.savoy.click, port: 21088, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-sh-hk-02-v2.cdn.savoy.click}}
-  - {name: 🇨🇳 中国-383.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: fsyd.kruwik.cn, port: 10641, type: vmess, uuid: 3faa79fc-c39b-338e-9c95-ca0b1c6f9e8c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: fsyd.kruwik.cn}}
-  - {name: 🇺🇸 美国-335.9KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-12.10MB/s(Youtube:不良林), server: 20.205.233.12, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-819.1KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇨🇳 中国-342.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-4.37MB/s(Youtube:不良林), server: 199.115.228.30, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇨🇳 中国-165.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇺🇸 美国-767.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-554.8KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-17.24MB/s(Youtube:不良林), server: zf1.333210.xyz, port: 40383, type: vmess, uuid: 04e1a3ce-9921-40db-a9eb-9f754491e111, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /bby, ws-headers: {Host: zf1.333210.xyz}}
+  - {name: 🇨🇳 中国-367.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-436.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-12.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-767.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-12.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-767.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-12.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-767.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-12.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-767.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-12.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-767.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-12.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-767.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-12.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-819.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-165.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-767.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-554.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
