--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-503.7KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-152.1KB/s(Youtube:不良林), server: 51.79.173.62, port: 1443, type: ss, cipher: aes-256-cfb, password: edGQaxoQhk}
-  - {name: 🇨🇳 中国-260.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-18.03MB/s(Youtube:不良林), server: zf1.333210.xyz, port: 40383, type: vmess, uuid: 04e1a3ce-9921-40db-a9eb-9f754491e111, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /bby, ws-headers: {Host: zf1.333210.xyz}}
-  - {name: 🇨🇳 中国-503.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.12MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-600.9KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇨🇳 中国-349.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-500.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 04eb6d9d-f6b8-4f6a-92e7-b336b2168b26, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
   - {name: 🇨🇳 中国-368.5KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-336.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-503.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-152.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-260.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-600.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-500.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-631.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-336.5KB/s(Youtube:不良林)
