--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-452.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-15.23MB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: 199.115.228.30, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-345.7KB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-2.66MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇩🇪 德国-2.87MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-615.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.92MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇰🇷 韩国-1.21MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
+  - {name: 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.92MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.92MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.92MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-15.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.92MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.92MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.92MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.7KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.92MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
